--- a/src/main/resources/assets/mahjong/lang/zh_CN.lang
+++ b/src/main/resources/assets/mahjong/lang/zh_CN.lang
@@ -1,4 +1,5 @@
 itemGroup.mahjong=麻将
+tile.blank_mahjong.name=麻将牌
 tile.1man.name=一万
 tile.2man.name=二万
 tile.3man.name=三万
@@ -14,7 +15,7 @@ tile.2pin.name=二饼
 tile.3pin.name=三饼
 tile.4pin.name=四饼
 tile.5pin.name=五饼
-tile.5pinRED.name=赤五饼
+tile.5pinRed.name=赤五饼
 tile.6pin.name=六饼
 tile.7pin.name=七饼
 tile.8pin.name=八饼
@@ -24,7 +25,7 @@ tile.2sou.name=二索
 tile.3sou.name=三索
 tile.4sou.name=四索
 tile.5sou.name=五索
-tile.5souRED.name=赤五索
+tile.5souRed.name=赤五索
 tile.6sou.name=六索
 tile.7sou.name=七索
 tile.8sou.name=八索
