--- a/src/main/resources/assets/mahjong/lang/zh_CN.lang
+++ b/src/main/resources/assets/mahjong/lang/zh_CN.lang
@@ -46,3 +46,9 @@ tile.bai.name=白
 tile.fa.name=发
 tile.zhong.name=中
 tile.riichibou.name=立直棒
+item.mjFacem1.name=万-图案
+item.mjFacem9.name=九万-图案
+item.mjFacep1.name=饼-图案
+item.mjFacep9.name=九饼-图案
+item.mjFaces1.name=索-图案
+item.mjFaces9.name=九索-图案
