--- a/src/main/resources/assets/mahjong/lang/zh_CN.lang
+++ b/src/main/resources/assets/mahjong/lang/zh_CN.lang
@@ -46,9 +46,19 @@ tile.bai.name=白
 tile.fa.name=发
 tile.zhong.name=中
 tile.riichibou.name=立直棒
+tile.mahjong_table.name=麻将桌
 item.mjFacem1.name=万-图案
 item.mjFacem9.name=九万-图案
 item.mjFacep1.name=饼-图案
 item.mjFacep9.name=九饼-图案
 item.mjFaces1.name=索-图案
 item.mjFaces9.name=九索-图案
+item.mjOpOk.name=确认
+item.mjOpNo.name=取消
+item.mjOpKita.name=拨北
+item.mjOpChi.name=吃
+item.mjOpPeng.name=碰
+item.mjOpGang.name=杠
+item.mjOpRii.name=立直
+item.mjOpRyuu.name=流局
+item.mjOpHe.name=和牌
