--- a/src/main/resources/assets/mahjong/lang/zh_CN.lang
+++ b/src/main/resources/assets/mahjong/lang/zh_CN.lang
@@ -62,3 +62,135 @@ item.mjOpGang.name=杠
 item.mjOpRii.name=立直
 item.mjOpRyuu.name=流局
 item.mjOpHe.name=和牌
+gui.position.east=东
+gui.position.south=南
+gui.position.west=西
+gui.position.north=北
+gui.text.waiting=等待中
+gui.text.playing=游戏中
+gui.text.hand=局
+gui.text.extra=本场
+gui.option.has=选项：
+gui.option.kyuushyukyuuhai=流局
+gui.option.riichi=立直
+gui.option.kita=拨北
+gui.option.angang=暗杠
+gui.option.gang=杠
+gui.option.plusgang=加杠
+gui.option.peng=碰
+gui.option.chi=吃
+gui.option.ron=食和
+gui.option.tsumo=自摸
+gui.option.cancel=取消
+gui.option.next=继续
+gui.text.agari=和牌
+gui.text.fu=符
+gui.text.fan=番
+gui.text.yakuman=役满
+gui.text.doubleyakuman=双役满
+gui.text.dora=宝牌
+gui.text.ura=里宝牌
+gui.text.points=分
+gui.text.ryuukyoku=流局
+gui.tile.m1=一万
+gui.tile.m2=二万
+gui.tile.m3=三万
+gui.tile.m4=四万
+gui.tile.m5=五万
+gui.tile.m5r=赤五万
+gui.tile.m6=六万
+gui.tile.m7=七万
+gui.tile.m8=八万
+gui.tile.m9=九万
+gui.tile.p1=一饼
+gui.tile.p2=二饼
+gui.tile.p3=三饼
+gui.tile.p4=四饼
+gui.tile.p5=五饼
+gui.tile.p5r=赤五饼
+gui.tile.p6=六饼
+gui.tile.p7=七饼
+gui.tile.p8=八饼
+gui.tile.p9=九饼
+gui.tile.s1=一索
+gui.tile.s2=二索
+gui.tile.s3=三索
+gui.tile.s4=四索
+gui.tile.s5=五索
+gui.tile.s5r=赤五索
+gui.tile.s6=六索
+gui.tile.s7=七索
+gui.tile.s8=八索
+gui.tile.s9=九索
+gui.tile.chun=春
+gui.tile.xia=夏
+gui.tile.qiu=秋
+gui.tile.dong=冬
+gui.tile.mei=梅
+gui.tile.lan=兰
+gui.tile.zhu=竹
+gui.tile.ju=菊
+gui.tile.east=东
+gui.tile.south=南
+gui.tile.west=西
+gui.tile.north=北
+gui.tile.bai=白
+gui.tile.fa=发
+gui.tile.zhong=中
+gui.ryuukyoku.kouhaiheikyoku=荒牌流局
+gui.ryuukyoku.kyuushyukyuuhai=九种九牌
+gui.ryuukyoku.suufonrenta=四风连打
+gui.ryuukyoku.suukansanra=四杠散了
+gui.ryuukyoku.suuchyariichi=四家立直
+gui.ryuukyoku.sanchyahou=三家和
+gui.ryuukyoku.nagashimankan=流局满贯
+gui.scorelevel.mankan=满贯
+gui.scorelevel.haneman=跳满
+gui.scorelevel.baiman=倍满
+gui.scorelevel.sanbaiman=三倍满
+gui.scorelevel.yakuman=役满
+gui.winninghand.gokushimusou=国士无双
+gui.winninghand.gokushimusou13=国士无双十三面听
+gui.winninghand.suuankou=四暗刻
+gui.winninghand.suuankoudanki=四暗刻单骑
+gui.winninghand.daisangen=大三元
+gui.winninghand.tsuuiisou=字一色
+gui.winninghand.shyousuushii=小四喜
+gui.winninghand.daisuushii=大四喜
+gui.winninghand.ryuuiisou=绿一色
+gui.winninghand.chinroutou=清老头
+gui.winninghand.suukantsu=四杠子
+gui.winninghand.chyuurenpoutou=九莲宝灯
+gui.winninghand.chyuurenpoutou9=纯正九莲宝灯
+gui.winninghand.tenhou=天和
+gui.winninghand.chiihou=地和
+gui.winninghand.chiniisou=清一色
+gui.winninghand.honiisou=混一色
+gui.winninghand.jyunchyantaiyaochyuu=纯全带幺九
+gui.winninghand.ryanbeekou=两杯口
+gui.winninghand.sanshyokudoujyun=三色同顺
+gui.winninghand.ikkitsuukan=一气通贯
+gui.winninghand.honchyantaiyaochyuu=混全带幺九
+gui.winninghand.chiitoitsu=七对子
+gui.winninghand.toitoihou=对对和
+gui.winninghand.sanankou=三暗刻
+gui.winninghand.honroutou=混老头
+gui.winninghand.sanshyokudoukou=三色同刻
+gui.winninghand.sankantsu=三杠子
+gui.winninghand.shyousangen=小三元
+gui.winninghand.dabururiichi=两立直
+gui.winninghand.riichi=立直
+gui.winninghand.ibbatsu=一发
+gui.winninghand.menzenchintsumohou=门前清自摸和
+gui.winninghand.danyaochyuu=断幺九
+gui.winninghand.binhu=平和
+gui.winninghand.iibeekou=一杯口
+gui.winninghand.yakuhai=役牌
+gui.winninghand.rinshyankaihou=岭上开花
+gui.winninghand.chyankan=抢杠
+gui.winninghand.haiteimouyue=海底摸月
+gui.winninghand.houteiraoyui=河底捞鱼
+gui.winninghand.kita=北宝牌
+gui.winninghand.aka=赤宝牌
+gui.winninghand.dora=宝牌
+gui.winninghand.ura=里宝牌
