--- a/src/main/resources/assets/mahjong/lang/zh_CN.lang
+++ b/src/main/resources/assets/mahjong/lang/zh_CN.lang
@@ -68,8 +68,20 @@ gui.position.west=西
 gui.position.north=北
 gui.text.waiting=等待中
 gui.text.playing=游戏中
+gui.text.riichibou=立直棒
 gui.text.hand=局
 gui.text.extra=本场
+gui.text.start=预约
+gui.text.sanma=三麻
+gui.text.fourp=四麻
+gui.length.east=东风战
+gui.length.south=东南战
+gui.length.all=一庄战
+gui.text.playerscount=人数
+gui.text.akadora=赤宝牌
+gui.text.cancelwaiting=取消预约
+gui.text.stopgame=终止游戏
+gui.text.tilesnotenough=麻将牌不齐全
 gui.option.has=选项：
 gui.option.kyuushyukyuuhai=流局
 gui.option.riichi=立直
