--- a/src/main/resources/assets/mahjong/lang/zh_CN.lang
+++ b/src/main/resources/assets/mahjong/lang/zh_CN.lang
@@ -82,6 +82,8 @@ gui.text.akadora=赤宝牌
 gui.text.cancelwaiting=取消预约
 gui.text.stopgame=终止游戏
 gui.text.tilesnotenough=麻将牌不齐全
+gui.text.hosted=托管
+gui.text.unhosted=取消托管
 gui.option.has=选项：
 gui.option.kyuushyukyuuhai=流局
 gui.option.riichi=立直
