add rest of en_US strings
Yaku names are romanized jp names based on spellings in http://arcturus.su/wiki/List_of_yaku

--- a/src/main/resources/assets/mahjong/lang/en_US.lang
+++ b/src/main/resources/assets/mahjong/lang/en_US.lang
@@ -1,2 +1,212 @@
-tile.1man.name=1 Man
 itemGroup.mahjong=Mahjong
+tile.blank_mahjong.name=Blank Mahjong Tile
+tile.1man.name=1 Man
+tile.2man.name=2 Man
+tile.3man.name=3 Man
+tile.4man.name=4 Man
+tile.5man.name=5 Man
+tile.5manRed.name=Red 5 Man
+tile.6man.name=6 Man
+tile.7man.name=7 Man
+tile.8man.name=8 Man
+tile.9man.name=9 Man
+tile.1pin.name=1 Pin
+tile.2pin.name=2 Pin
+tile.3pin.name=3 Pin
+tile.4pin.name=4 Pin
+tile.5pin.name=5 Pin
+tile.5pinRed.name=Red 5 Pin
+tile.6pin.name=6 Pin
+tile.7pin.name=7 Pin
+tile.8pin.name=8 Pin
+tile.9pin.name=9 Pin
+tile.1sou.name=1 Sou
+tile.2sou.name=2 Sou
+tile.3sou.name=3 Sou
+tile.4sou.name=4 Sou
+tile.5sou.name=5 Sou
+tile.5souRed.name=Red 5 Sou
+tile.6sou.name=6 Sou
+tile.7sou.name=7 Sou
+tile.8sou.name=8 Sou
+tile.9sou.name=9 Sou
+tile.chun.name=Spring Season
+tile.xia.name=Summer Season
+tile.qiu.name=Autumn Season
+tile.dong.name=Winter Season
+tile.mei.name=Plum Flower
+tile.lan.name=Orchid Flower
+tile.zhu.name=Bamboo Flower
+tile.ju.name=Chrysanthemum Flower
+tile.east.name=East Wind
+tile.south.name=South Wind
+tile.west.name=West Wind
+tile.north.name=North Wind
+tile.bai.name=White Dragon
+tile.fa.name=Green Dragon
+tile.zhong.name=Red Dragon
+tile.riichibou.name=Riichi stick
+tile.mahjong_table.name=Mahjong Table
+item.mjFacem1.name=Man Face
+item.mjFacem9.name=9 Man Face
+item.mjFacep1.name=Pin Face
+item.mjFacep9.name=9 Pin Face
+item.mjFaces1.name=Sou Face
+item.mjFaces9.name=9 Sou Face
+item.mjOpOk.name=Ok Call
+item.mjOpNo.name=No Call
+item.mjOpKita.name=Kita Call
+item.mjOpChi.name=Chi Call
+item.mjOpPeng.name=Pon Call
+item.mjOpGang.name=Kan Call
+item.mjOpRii.name=Riichi Call
+item.mjOpRyuu.name=Draw Call
+item.mjOpHe.name=Win Call
+gui.position.east=East
+gui.position.south=South
+gui.position.west=West
+gui.position.north=North
+gui.text.waiting=Waiting
+gui.text.playing=Playing
+gui.text.riichibou=Riichi stick
+gui.text.hand=Hand
+gui.text.extra=Repeats
+gui.text.start=Start
+gui.text.sanma=3 Player
+gui.text.fourp=4 Player
+gui.text.furiten=Furiten
+gui.length.one=One hand
+gui.length.east=East round
+gui.length.south=South Round
+gui.length.all=Full
+gui.text.playerscount=Player count
+gui.text.akadora=Red dora
+gui.text.cancelwaiting=Cancel Waiting
+gui.text.stopgame=Stop game
+gui.text.tilesnotenough=Not enough tiles
+gui.text.hosted=Hosted
+gui.text.unhosted=Unhosted
+gui.option.has=?
+gui.option.kyuushyukyuuhai=9 honor/terminal draw
+gui.option.riichi=Riichi
+gui.option.kita=Kita
+gui.option.angang=Concealed Kan
+gui.option.gang=Kan
+gui.option.plusgang=Added Kan
+gui.option.peng=Pon
+gui.option.chi=Chi
+gui.option.ron=Ron
+gui.option.tsumo=Tsumo
+gui.option.cancel=Cancel
+gui.option.next=Next
+gui.text.agari=Agari
+gui.text.fu=Fu
+gui.text.fan=Han
+gui.text.yakuman=Yakuman
+gui.text.doubleyakuman=Double Yakuman
+gui.text.dora=Dora
+gui.text.ura=Uradora
+gui.text.points=Points
+gui.text.ryuukyoku=Draw
+gui.tile.m1=1 Man
+gui.tile.m2=2 Man
+gui.tile.m3=3 Man
+gui.tile.m4=4 Man
+gui.tile.m5=5 Man
+gui.tile.m5r=Red 5 Man
+gui.tile.m6=6 Man
+gui.tile.m7=7 Man
+gui.tile.m8=8 Man
+gui.tile.m9=9 Man
+gui.tile.p1=1 Pin
+gui.tile.p2=2 Pin
+gui.tile.p3=3 Pin
+gui.tile.p4=4 Pin
+gui.tile.p5=5 Pin
+gui.tile.p5r=Red 5 Pin
+gui.tile.p6=6 Pin
+gui.tile.p7=7 Pin
+gui.tile.p8=8 Pin
+gui.tile.p9=9 Pin
+gui.tile.s1=1 Sou
+gui.tile.s2=2 Sou
+gui.tile.s3=3 Sou
+gui.tile.s4=4 Sou
+gui.tile.s5=5 Sou
+gui.tile.s5r=Red 5 Sou
+gui.tile.s6=6 Sou
+gui.tile.s7=7 Sou
+gui.tile.s8=8 Sou
+gui.tile.s9=9 Sou
+gui.tile.chun=Spring Season
+gui.tile.xia=Summer Season
+gui.tile.qiu=Autumn Season
+gui.tile.dong=Winter Season
+gui.tile.mei=Plum Flower
+gui.tile.lan=Orchid Flower
+gui.tile.zhu=Bamboo Flower
+gui.tile.ju=Chrysanthemum Flower
+gui.tile.east=East Wind
+gui.tile.south=South Wind
+gui.tile.west=West Wind
+gui.tile.north=North Wind
+gui.tile.bai=White Dragon
+gui.tile.fa=Green Dragon
+gui.tile.zhong=Red Dragon
+gui.ryuukyoku.kouhaiheikyoku=Exhaustive Draw
+gui.ryuukyoku.kyuushyukyuuhai=9 Honor/Terminal Draw
+gui.ryuukyoku.suufonrenta=4 Wind Draw
+gui.ryuukyoku.suukansanra=4 Kan Draw
+gui.ryuukyoku.suuchyariichi=4 Riichi Draw
+gui.ryuukyoku.sanchyahou=3 Ron Draw
+gui.ryuukyoku.nagashimankan=Nagashi Mangan
+gui.scorelevel.mankan=Mangan
+gui.scorelevel.haneman=Haneman
+gui.scorelevel.baiman=Baiman
+gui.scorelevel.sanbaiman=Sanbaiman
+gui.scorelevel.yakuman=Yakuman
+gui.winninghand.gokushimusou=Kokushi Musou
+gui.winninghand.gokushimusou13=Kokushi Musou 13-Tile Wait
+gui.winninghand.suuankou=Suuankou
+gui.winninghand.suuankoudanki=Suuankou
+gui.winninghand.daisangen=Daisangen
+gui.winninghand.tsuuiisou=Tsuuiisou
+gui.winninghand.shyousuushii=Shousuushii
+gui.winninghand.daisuushii=Daisuushii
+gui.winninghand.ryuuiisou=Ryuuiisou
+gui.winninghand.chinroutou=Chinroutou
+gui.winninghand.suukantsu=Suukantsu
+gui.winninghand.chyuurenpoutou=Chuuren Poutou
+gui.winninghand.chyuurenpoutou9=Chuuren Poutou (9 Sided Wait)
+gui.winninghand.tenhou=Tenhyou
+gui.winninghand.chiihou=Chiihou
+gui.winninghand.chiniisou=Chinitsu
+gui.winninghand.honiisou=Honitsu
+gui.winninghand.jyunchyantaiyaochyuu=Junchan Taiyao
+gui.winninghand.ryanbeekou=Ryanpeikou
+gui.winninghand.sanshyokudoujyun=Sanshoku Doujun
+gui.winninghand.ikkitsuukan=Ittsu
+gui.winninghand.honchyantaiyaochyuu=Chantaiyao
+gui.winninghand.chiitoitsu=Chiitoitsu
+gui.winninghand.toitoihou=Toitoi
+gui.winninghand.sanankou=Sanankou
+gui.winninghand.honroutou=Honroutou
+gui.winninghand.sanshyokudoukou=Sanshoku Doukou
+gui.winninghand.sankantsu=Sankantsu
+gui.winninghand.shyousangen=Shousangen
+gui.winninghand.dabururiichi=Double Riichi
+gui.winninghand.riichi=Riichi
+gui.winninghand.ibbatsu=Ippatsu
+gui.winninghand.menzenchintsumohou=Menzen Tsumo
+gui.winninghand.danyaochyuu=Tanyao
+gui.winninghand.binhu=Pinfu
+gui.winninghand.iibeekou=Iipeikou
+gui.winninghand.yakuhai=Yakuhai
+gui.winninghand.rinshyankaihou=Rinshan
+gui.winninghand.chyankan=Chankan
+gui.winninghand.haiteimouyue=Haitei
+gui.winninghand.houteiraoyui=houtei
+gui.winninghand.kita=Kita
+gui.winninghand.aka=Red Dora
+gui.winninghand.dora=Dora
+gui.winninghand.ura=Uradora
